# chronicler

./: .git-blame-ignore-revs  .prettierrc  CHANGELOG.md  HELP.md  README.md  package.json  pnpm-lock.yaml  postcss.config.js  tailwind.config.js  vite.config.js
.github/workflows/: release.yml
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  error.rs  events.rs  fonts.rs  importer.rs  indexer.rs  lib.rs  licensing.rs  main.rs  mediawiki_importer.rs  models.rs  parser.rs  renderer.rs  sanitizer.rs  template.rs  utils.rs  watcher.rs  wikilink.rs  world.rs  writer.rs
src/lib/: actions.ts  appState.ts  bindings.ts  commands.ts  config.ts  contextMenuActions.ts  domActions.ts  dragStore.ts  explorerStore.ts  licenseStore.ts  modalStore.ts  settingsStore.ts  startup.ts  stores.ts  types.ts  updater.ts  utils.ts  viewStores.ts  worldStore.ts
src/lib/components/: BacklinksPanel.svelte  BrokenLinksReportView.svelte  Button.svelte  ChangelogModal.svelte  ConfirmModal.svelte  ContextMenu.svelte  CreateFileModal.svelte  DonationModal.svelte  Editor.svelte  ErrorBox.svelte  FileExplorer.svelte  FileTree.svelte  FileView.svelte  HelpModal.svelte  ImageView.svelte  ImporterModal.svelte  Infobox.svelte  Modal.svelte  ModalManager.svelte  NagScreenModal.svelte  NewPageModal.svelte  Preview.svelte  ReportListView.svelte  SaveStatus.svelte  SearchInput.svelte  SettingsModal.svelte  Sidebar.svelte  TableOfContents.svelte  TagIndexView.svelte  TagList.svelte  TemplateManagerModal.svelte  TextInputModal.svelte  ThemeEditorModal.svelte  UpdateModal.svelte  VaultSelector.svelte  ViewHeader.svelte  WelcomeView.svelte
src/routes/: +layout.svelte  +layout.ts  +page.svelte
static/: help.md
