[package]
name = "chronicler"
version = "0.1.0"
description = "A worldbuilding application"
authors = ["Michael Kirkland"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "chronicler_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
regex = "1.10"
pulldown-cmark = { version = "0.10", features = ["serde"] }
walkdir = "2.3"
notify = "6.1"
thiserror = "1.0"
log = "0.4"
dirs-next = "2.0"
twox-hash = "1.6"
atomicwrites = "0"
notify-debouncer-full = "0.3"
tokio = { version = "1", features = ["sync"] }
parking_lot = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "local-time"] }
clap = { version = "4.5", features = ["derive"] }
tempfile = "3"
tauri-plugin-dialog = "2"
