[package]
name = "chronicler"
version = "0.1.0"
description = "A worldbuilding application"
authors = ["Michael Kirkland"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
regex = "1.10"
pulldown-cmark = { version = "0.10", features = ["serde"] }
walkdir = "2.3"
notify = "6.1"
thiserror = "1.0"
log = "0.4"
dirs-next = "2.0"
twox-hash = "1.6"
atomicwrites = "0"
notify-debouncer-full = "0.3"
tokio = { version = "1", features = ["sync"] }
parking_lot = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "local-time"] }
clap = { version = "4.5", features = ["derive"] }
tempfile = "3"
tauri-plugin-dialog = "2"
# Added for importer
reqwest = { version = "0.12", features = ["json"] }
zip-extract = "0.1"
flate2 = "1.0"
tar = "0.4"
glob = "0.3"
